[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Afnan Enayet <afnan@afnan.io>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
rich = "^10.13.0"
plumbum = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
