[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Afnan Enayet <afnan@afnan.io>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
plumbum = "^1.7.0"
loguru = "^0.6.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pyflakes = "^2.4.0"
mypy = "^0.910"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
