[project]
name = "updater"
version = "0.1.0"
description = ""
authors = [{ name = "Afnan Enayet", email = "afnan@afnan.io" }]
requires-python = "~=3.9"
dependencies = [
  "click>=8.0.3,<9",
  "plumbum>=1.7.0,<2",
  "loguru>=0.6.0,<0.7",
  "rich>=13.7.0,<14",
]

[dependency-groups]
dev = ["pyflakes>=2.4.0,<3", "mypy>=0.910,<0.911", "black>=24.8.0,<25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
